# minimal-ci-python

./: .gitignore  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
src/minipkg/: core.py
tests/: test_core.py
