[project]
name = "minipkg"
version = "0.0.1"
description = "Minimal demo package with CI"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "mypy>=1.10", "flake8>=7.0"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
